--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,20 @@ h1 {
   white-space: wrap;
 }
 
+h1 a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1 a:hover {
+  color: inherit;
+  text-decoration: line-through;
+}
+
+.board-container {
+  position: relative;
+}
+
 .board {
   display: grid;
   grid-template-columns: repeat(3, 0fr);
@@ -52,7 +66,7 @@ h1 {
   margin: auto;
 }
 
-.turn {
+.status {
   font-size: 1.5rem;
   margin: 1rem 0;
 }
