logo, brand styling, improve pre/post game ui

--- a/client/src/Strike.css
+++ b/client/src/Strike.css
@@ -10,7 +10,7 @@
 .strike {
   position: absolute;
   background-color: #e76969;
-  height: 5px;
+  height: 1vw;
   width: 100%;
   transform-origin: center;
 }
