--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,23 +4,49 @@
   text-align: center;
 }
 
-h1 {
-  white-space: wrap;
+.logo img {
+  max-width: min(600px, 80vw);
+  height: auto;
+  display: block;
+  margin: 2em auto;
 }
 
-h1 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-h1 a:hover {
-  color: inherit;
-  text-decoration: line-through;
+.logo.narrow img {
+  max-width: min(300px, 40vw);
+  margin: 2rem auto 3rem;
 }
 
 .status {
-  font-size: 1.5rem;
-  margin: 1rem 0 3rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin: 2rem 0 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+.button {
+  border-radius: 999px;
+  border: 1px solid transparent;
+  padding: 0.9em 1.8em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #000000;
+  color: #ffffff;
+  cursor: pointer;
+  transition: opacity 0.25s;
+  display: inline-flex;
+  align-items: center;
+  line-height: 1;
+}
+.button:hover {
+  opacity: 0.8;
+}
+.button:focus,
+.button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 .board-container {
@@ -30,11 +56,12 @@ h1 a:hover {
 .board {
   display: grid;
   grid-template-columns: repeat(3, 0fr);
+  color: #000000;
 }
 
 .cell {
   display: flex;
-  border: 2px solid currentColor;
+  border: 0.5vw solid currentColor;
   width: 25vw;
   height: 25vw;
 }
